fixed aligning button in Challenges

--- a/envrmt/src/Components/NewChallenge/challenges.css
+++ b/envrmt/src/Components/NewChallenge/challenges.css
@@ -16,6 +16,9 @@
 	margin-left: -50px;
 	margin-top: 1rem;
 	margin-bottom: 20px;
+	text-align: center;
+	justify-content: center;
+	
 }
 
 .new-challenges h1 {
@@ -51,7 +54,7 @@
 
 .new-challenges h5 {
 	font-size: 16px;
-	font-weight: 600;
+	font-weight: 500;
 	font-family: Inter;
 	color: #5db075;
 	padding-left: 0;
@@ -107,7 +110,7 @@
 	border: transparent;
 }
 
-.back-button {
+a.back-button {
 	background: none;
 	padding: 0;
 	border: none;
